# uv-monorepo-dependency-tool

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: build.yaml  release.yaml
examples/: README.md  pom.xml
examples/project-a/: README.md  pom.xml  pyproject.toml
examples/project-a-consumer/: README.md  pom.xml  pyproject.toml
examples/project-a-consumer/src/project_a_consumer/: hello_from_consumer.py
examples/project-a/src/project_a/: hello_from_project_a.py
rewrite-path-dependencies/: package-version.py  pom.xml  pyproject.toml
rewrite-path-dependencies/src/rewrite_path_dependencies/: cli.py
uv-monorepo-dependency-tool/: README.md  pom.xml  pyproject.toml
uv-monorepo-dependency-tool/src/uv_monorepo_dependency_tool/: cli.py
